<resources>
    <string name="app_name">E-Learner</string>
    <string name="action_settings">Settings</string>
    <string name="txt_logo">E_Learner Logo</string>
    <string name="txt_login_username">Username</string>
    <string name="txt_login_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="txt_btn_register"><a href="http://www.google.com">Register</a></string>
    <string name="txt_btn_forgot_password"><a href="http://www.google.com">Forgot Password, Reset</a></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_empty">Empty</string>
    <string name="title_course_list">Courses</string>
    <string name="title_course_add_list">Choose Course To Subscribe To</string>
    <string name="title_course_detail">Course Detail</string>
    <string name="list_course_empty">You Aren\'t Subscribed To Any Courses. Click Here To Refresh (Try Fetch Courses Again)</string>
</resources>
