<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:id="@+id/imgv_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/txt_logo"
        android:src="@drawable/e_learner_logo"
        android:scaleType="fitCenter" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_login_username"
        android:gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerVertical="true"
        android:hint="@string/txt_login_username"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et_login_password"
        android:hint="@string/txt_login_password"
        android:gravity="center"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_below="@+id/et_login_username"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_login_password"
        android:layout_centerHorizontal="true"
        android:id="@+id/ll_login_btns">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:id="@+id/btn_login"
            android:layout_weight="1"
            android:textColor="@color/colorBackground" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_btn_register"
            android:padding="5sp"
            android:textColor="@color/colorLink"
            android:linksClickable="true"
            android:id="@+id/btn_go_to_register"
            android:background="?android:attr/selectableItemBackground"
            android:layout_weight="1"
            android:autoLink="all"
            android:gravity="start"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_forgot_password"
        android:padding="5sp"
        android:textColor="@color/colorLink"
        android:id="@+id/btn_go_to_forgot"
        android:background="?android:attr/selectableItemBackground"
        android:layout_below="@+id/ll_login_btns"
        android:layout_alignParentLeft="true"
        android:linksClickable="true"
        android:autoLink="all"
        android:layout_marginTop="5dp"
        android:layout_alignParentStart="true" />

</RelativeLayout>
